Use padding instead of margin to avoid gaps
PR feedback from @Julow

--- a/src/html_support_files/odoc.css
+++ b/src/html_support_files/odoc.css
@@ -1070,6 +1070,7 @@ td.def-doc *:first-child {
 
 .odoc-toc li ul {
   margin: 0px;
+  padding-top: 4px;
 }
 
 .odoc-toc ul {
@@ -1077,7 +1078,7 @@ td.def-doc *:first-child {
 }
 
 .odoc-toc ul li {
-  margin: 8px 0;
+  padding: 4px 0;
 }
 
 .odoc-toc>ul>li {
